trunk/Archive2/25/b50082a1cfb72e/output
main.cpp: In function 'int main()':
main.cpp:23:11: error: invalid initialization of non-const reference of type 'int&' from an rvalue of type 'int'
     test(3);
           ^
main.cpp:9:6: error: in passing argument 1 of 'void test(T&) [with T = int]'
 void test(T&) { }
      ^
